Team members img alignment fixes

--- a/AgileCalendarExample/Content/css/agile.css
+++ b/AgileCalendarExample/Content/css/agile.css
@@ -18,9 +18,8 @@
 }
 
 /*======================== Vacation ========================*/
-.agile-vacation{display:table;position:absolute;bottom:0;width:100px}
+.agile-vacation{display:table;position:absolute;bottom:0;width:100px;text-align:right}
 .agile-vacation > div
 {
     display:table-cell;
-    float:right
 }
